# slo-impact

./: Dockerfile  LICENSE  README copy.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: config.example.yaml
slo_impact/: __init__.py  calculator.py  config.py  main.py  models.py
slo_impact/collectors/: __init__.py  demo.py  prometheus.py
static/: index.html
tests/: test_core.py
